2003-08-18  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/ia64/dl-machine.h (elf_machine_rela): Use _dl_reloc_bad_type.
	(elf_machine_lazy_rel): Likewise.

2003-08-18  Art Haas  <ahaas@airmail.net>

	* malloc/malloc.h: Remove unneeded ';' where closing the C++
	extern block.

2003-08-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/dl-fptr.h (ELF_MACHINE_LOAD_ADDRESS): Support
	loading big binaries where @gprel(sym) cannot be handled in 'add'
	but instead has to be used with 'movl'.

2003-08-17  Juergen Kreileder <jk@blackdown.de>
	    Andreas Jaeger  <aj@suse.de>

	* sysdeps/x86_64/bits/byteswap.h: New file.

2003-08-17  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/i386/posix_fadvise64.S: Fix typo.

2003-08-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc32/sysdep.h (PSEUDO_ERRVAL,
	PSEUDO_RET_ERRVAL, ret_ERRVAL, PSEUDO_END_ERRVAL): Define.
	* sysdeps/powerpc/powerpc64/sysdep.h (PSEUDO_ERRVAL,
	PSEUDO_RET_ERRVAL, ret_ERRVAL, PSEUDO_END_ERRVAL): Define.
	* sysdeps/unix/alpha/sysdep.h (PSEUDO_ERRVAL,
	ret_ERRVAL, PSEUDO_END_ERRVAL): Define.
	* sysdeps/unix/mips/sysdep.h (PSEUDO_ERRVAL,
	ret_ERRVAL, PSEUDO_END_ERRVAL): Define.
	* sysdeps/unix/sparc/sysdep.h (PSEUDO_ERRVAL,
	ret_ERRVAL): Define.
	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep.h (PSEUDO_ERRVAL,
	PSEUDO_END_ERRVAL, ret_ERRVAL): Define.
	* sysdeps/unix/sysv/linux/s390/s390-64/sysdep.h (PSEUDO_ERRVAL,
	PSEUDO_END_ERRVAL, ret_ERRVAL): Define.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sysdep.h (PSEUDO_ERRVAL):
	Define.
	* sysdeps/unix/sysv/linux/sparc/sparc64/sysdep.h (PSEUDO_ERRVAL,
	PSEUDO_END_ERRVAL, ret_ERRVAL): Define.
	* sysdeps/unix/sysdep.h (PSEUDO_END_ERRVAL): Define.

	* sysdeps/unix/sysv/linux/syscalls.list (posix_fadvise64,
	posix_fadvise64_64): Remove.
	* sysdeps/unix/sysv/linux/alpha/syscalls.list (posix_fadvise64): Add
	V flag.
	* sysdeps/unix/sysv/linux/ia64/syscalls.list (posix_fadvise64):
	Likewise.